sept 23 question yaml generator

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "createQualityTestsYaml": "npm run build && node ./build/createQualityTestsYaml.js",
+    "createQualityTestsYaml-aug-2023": "npm run build && node ./build/createAug2023QualityTestsYaml.js",
+    "createQualityTestsYaml-sept-2023": "npm run build && node ./build/createSept2023QualityTestsYaml.js",
     "scrubMessages": "npm run build && node ./build/scrubMessages.js",
     "analyzeMessages": "npm run build && node ./build/analyzeMessages.js",
     "createView/messages_by_rating": "npm run build && node ./build/createView/messages_by_rating.js",
