update scripts to handle different testing scenarios

--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -19,7 +19,9 @@
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
     "start": "pm2-runtime ./dist/index.js",
     "test": "jest --forceExit",
-    "test:llmQualitative": "jest --config jest.config.llmQualitative.js --forceExit",
+    "test:llmQualitative": "jest --config jest.config.llmQualitative.js --forceExit src/llmQualitativeTests/qualitative.test.ts",
+    "test:llmQualitative:top": "RUN_TOP=true npm run test:llmQualitative",
+    "test:llmQualitative:utils": "RUN_TOP=true jest --config jest.config.llmQualitative.js --forceExit --testPathIgnorePatterns src/llmQualitativeTests/qualitative.test.ts",
     "release": "release-it"
   },
   "dependencies": {
