--- a/chat-core/tsconfig.json
+++ b/chat-core/tsconfig.json
@@ -15,7 +15,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./src",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "lib": ["ES2020"]
   },
   "sourceMap": true,
   "include": ["./src/**/*.ts", "src/index.ts"],
