--- a/chat-core/tsconfig.json
+++ b/chat-core/tsconfig.json
@@ -19,6 +19,6 @@
     "lib": ["ES2020"]
   },
   "sourceMap": true,
-  "include": ["./src/**/*.ts", "src/index.ts"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["**/*.test.ts"]
 }
