--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,7 +12,7 @@
     "createView/scrubbed_messages_by_rating": "npm run build && node ./build/createView/scrubbed_messages_by_rating.js",
     "createView/scrubbed_top_250_references": "npm run build && node ./build/createView/scrubbed_top_250_references.js",
     "createView/scrubbed_topics": "npm run build && node ./build/createView/scrubbed_topics.js",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc -b",
     "postbuild": "cp ./src/MessageAnalysis.d.ts ./build/",
     "clean": "rm -rf ./build",
     "release": "release-it"
@@ -22,7 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "chat-core": "file:../chat-core",
-    "chat-server": "file:../chat-server",
+    "mongodb-chatbot-server": "file:../chat-server",
     "csv": "^6.3.1",
     "dotenv": "^16.3.1",
     "mongodb": "^5.7.0",
