--- a/chat-core/tsconfig.json
+++ b/chat-core/tsconfig.json
@@ -15,9 +15,10 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./src",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "lib": ["ES2020"]
   },
   "sourceMap": true,
-  "include": ["./src/**/*.ts", "src/index.ts"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["**/*.test.ts"]
 }
