--- a/ingest-mongodb-public/environments/production.yml
+++ b/ingest-mongodb-public/environments/production.yml
@@ -3,23 +3,23 @@ image:
   tag: 18
 
 cronJobs:
-  - name: ingest-content
+  - name: ingest-all-content
     schedule: "0 6 * * *" # every day at 6am UTC (1AM EST)
-    command: ["node", ".", "all"]
+    command: ["npm", "run", "ingest:all"]
     env:
       OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
-      OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
-      MONGODB_DATABASE_NAME: docs-chatbot-staging
+      OPENAI_EMBEDDING_MODEL_VERSION: 2023-06-01-preview
+      MONGODB_DATABASE_NAME: docs-chatbot-prod
       VECTOR_SEARCH_INDEX_NAME: default
       OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
     envSecrets:
-      MONGODB_CONNECTION_URI: docs-chatbot-staging
-      OPENAI_ENDPOINT: docs-chatbot-staging
-      OPENAI_API_KEY: docs-chatbot-staging
-      OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-staging
-      OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
-      DEVCENTER_CONNECTION_URI: docs-chatbot-staging
-      GITHUB_ACCESS_TOKEN: docs-chatbot-staging
+      MONGODB_CONNECTION_URI: docs-chatbot-prod
+      OPENAI_ENDPOINT: docs-chatbot-prod
+      OPENAI_API_KEY: docs-chatbot-prod
+      OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-prod
+      OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-prod
+      DEVCENTER_CONNECTION_URI: docs-chatbot-prod
+      GITHUB_ACCESS_TOKEN: docs-chatbot-prod
     resources:
       # guaranteed amount of resources
       requests:
